--- a/python.html
+++ b/python.html
@@ -35,7 +35,174 @@
 </head>
 
 <body>
-    <script></script>
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+        <div class="flex-1">
+            <a href="index.html" class="btn btn-ghost text-xl">Project</a>
+        </div>
+        <div class="flex-none mx-5">
+            <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    class="inline-block w-5 h-5 stroke-current">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
+                    </path>
+                </svg>
+                <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
+                    <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
+                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                    <li><a href=" References.html">References</a></li>
+                </ul>
+            </button>
+        </div>
+    </nav>
+    <div class="flex flex-col justify-center items-center mt-10">
+        <img src="asset/python2.avif" class="pic rounded-lg" alt="" width="1000" height="1000">
+    </div>
+    <div class="m-7">
+        <h1 class="text-3xl text-warning">Python คืออะไร ?</h1>
+        <div class="m-4">
+            <p class="text-xl">Python เป็นภาษาการเขียนโปรแกรมที่ใช้อย่างแพร่หลายในเว็บแอปพลิเคชัน การพัฒนาซอฟต์แวร์
+                วิทยาศาสตร์ข้อมูล และแมชชีนเลิร์นนิง (ML) นักพัฒนาใช้ Python เนื่องจากมีประสิทธิภาพ เรียนรู้ง่าย
+                และสามารถทำงานบนแพลตฟอร์มต่างๆ ได้มากมาย ทั้งนี้ซอฟต์แวร์ Python สามารถดาวน์โหลดได้ฟรี
+                ผสานการทำงานร่วมกับระบบทุกประเภท และเพิ่มความเร็วในการพัฒนา</p>
+        </div>
+        <h1 class="text-3xl text-warning">Python มีคุณสมบัติใดบ้าง ?</h1>
+        <div class="m-4">
+            <ul class="list-disc pl-5 mt-2">
+                <li class="mb-2">
+                    <p class="text-xl">เรียบง่ายและเรียนรู้ได้ง่าย</p>
+                    <p class="text-base">Python นั้นง่ายต่อการเรียนรู้เมื่อเทียบกับภาษาโปรแกรมอื่น ๆ
+                        ไวยากรณ์ตรงไปตรงมาและเหมือนกับภาษาอังกฤษมาก Python
+                        นั้นง่ายมากในการเรียนรู้ภาษาเมื่อเทียบกับภาษาอื่น ๆ เช่น C, C #, Javascript, Java และอื่น ๆ
+                        การเขียนโค้ดในภาษา Python นั้นง่ายมากและทุกคนสามารถเรียนรู้พื้นฐานเกี่ยวกับ Python
+                        ได้ในเวลาไม่กี่ชั่วโมงหรือหลายวัน เป็นภาษาโปรแกรมที่แนะนำสำหรับผู้เริ่มต้น
+                        คุณสมบัติหลักของภาษาคือลักษณะรหัสหลอก ช่วยให้คุณมีสมาธิในการแก้ปัญหามากกว่าภาษา</p>
+                </li>
+                <li class="mb-2">
+                    <p class="text-xl">การเขียนโปรแกรมเชิงวัตถุ</p>
+                    <p class="text-base">Python เป็นภาษาโปรแกรมหลายกระบวนทัศน์ สนับสนุนวิธีการเขียนโปรแกรมที่แตกต่างกัน
+
+                        วิธีหนึ่งที่ได้รับความนิยมในการแก้ปัญหาการเขียนโปรแกรมคือการสร้างวัตถุ
+                        สิ่งนี้เรียกว่าการเขียนโปรแกรมเชิงวัตถุ (OOP) เช่นเดียวกับภาษาโปรแกรมวัตถุประสงค์ทั่วไป Python
+                        ยังเป็นภาษาเชิงวัตถุตั้งแต่เริ่มต้น ช่วยให้เราสามารถพัฒนาแอปพลิเคชันโดยใช้วิธีเชิงวัตถุ ใน
+                        Python เราสามารถสร้างและใช้คลาสและออบเจ็กต์ได้อย่างง่ายดาย
+
+                        กระบวนทัศน์เชิงวัตถุคือการออกแบบโปรแกรมโดยใช้คลาสและวัตถุ
+                        ออบเจ็กต์นั้นเกี่ยวข้องกับเอนทิตีในโลกแห่งความเป็นจริงเช่นหนังสือบ้านดินสอ ฯลฯ
+                        แนวคิดของโอ๊ะโอมุ่งเน้นไปที่การเขียนโค้ดที่ใช้ซ้ำได้
+                        เป็นเทคนิคที่แพร่หลายในการแก้ปัญหาโดยการสร้างวัตถุ</p>
+                </li>
+                <li class="mb-2">
+                    <p class="text-xl">ฟรีและโอเพ่นซอร์ส</p>
+                    <p class="text-base">Python เป็นภาษาโปรแกรมโอเพ่นซอร์สฟรีที่พร้อมให้ทุกคนใช้งานได้
+                        นอกจากนี้ยังมีระบบนิเวศที่ใหญ่โตและกำลังเติบโตพร้อมแพ็คเกจโอเพนซอร์สและไลบรารีที่หลากหลาย
+                        หากคุณต้องการที่จะดาวน์โหลดและติดตั้งหลามบนคอมพิวเตอร์ของคุณคุณสามารถทำมันได้ฟรีที่python.org
+                        Python - มาตรฐานสำหรับภาษาโปรแกรมและ CPython -
+                        การใช้งานอ้างอิงของมาตรฐานดังกล่าวได้รับอนุญาตภายใต้ PSFL
+                        ซึ่งเป็นใบอนุญาตที่เข้ากันได้กับลิขสิทธิ์ซอฟต์แวร์ฟรีเช่น GPL (ที่จริงแล้วอนุญาตมากกว่า GPL)
+
+                        ซึ่งหมายความว่าเป็นโอเพ่นซอร์สและซอร์สโค้ดสำหรับ CPython มีอยู่ที่เว็บไซต์อย่างเป็นทางการ
+                        ไม่มีสิ่งใดที่ป้องกันไม่ให้ใครบางคนนำมาตรฐาน Python
+                        ไปใช้เป็นซอฟต์แวร์ที่เป็นกรรมสิทธิ์ได้อย่างไรก็ตามการใช้งาน Python ส่วนใหญ่เป็นโอเพ่นซอร์ส (เช่น
+                        Jython, IronPython, PyPy) มีการใช้งานที่เป็นความลับบางอย่างที่เป็นกรรมสิทธิ์</p>
+                </li>
+                <li class="mb-2">
+                    <p class="text-xl">ภาษาระดับสูง</p>
+                    <p class="text-base">
+                        ตามหลักการพื้นฐานของการเข้ารหัสปัจจัยที่ทำให้ภาษาอยู่ในระดับสูงคือระยะห่างจากรหัสไบนารีของเครื่อง
+                        จำนวนชั้นของรหัสที่ภาษาอยู่ห่างจาก 0s และ 1s
+                        ธรรมดาของเครื่องเป็นสิ่งที่ตัดสินระดับของภาษาโปรแกรมใด ๆ ในทางปฏิบัติ
+
+                        ในโลกของวิศวกรรมซอฟต์แวร์ Python ถูกเข้าใจว่าเป็นภาษาที่มีวัตถุประสงค์ทั่วไประดับสูง
+                        ซึ่งหมายความว่าไม่ใช่ภาษาคอมไพล์แบบตรงของคุณ (เช่น Java หรือ C)
+                        แต่เป็นภาษาไดนามิกที่ตีความซึ่งต้องรันในระบบที่กำหนดโดยใช้โปรแกรมอื่นแทนตัวประมวลผลภายใน
+
+                        ซึ่งหมายความว่าเมื่อคุณเขียนโค้ดใน Python
+                        คุณไม่จำเป็นต้องระวังโครงสร้างการเข้ารหัสสถาปัตยกรรมและการจัดการหน่วยความจำ</p>
+                </li>
+                <li class="mb-2">
+                    <p class="text-xl">ภาษาตีความ</p>
+                    <p class="text-base">Python เป็นภาษาที่ "ตีความ"
+
+                        ซึ่งหมายความว่าจะใช้ล่าม ล่ามแตกต่างจากคอมไพเลอร์มาก
+
+                        ล่ามจะเรียกใช้คำสั่งของโค้ด“ ทีละคน”
+                        ในขณะที่คอมไพเลอร์รันโค้ดทั้งหมดและแสดงรายการข้อผิดพลาดที่เป็นไปได้ทั้งหมดในแต่ละครั้ง
+
+                        นั่นเป็นเหตุผลที่ python
+                        แสดงข้อความแสดงข้อผิดพลาดเพียงข้อความเดียวแม้ว่ารหัสของคุณจะมีข้อผิดพลาดหลายข้อก็ตาม
+                        เช่นเดียวกับภาษาอื่น ๆ C, C ++, Java และอื่น ๆ ไม่จำเป็นต้องคอมไพล์โค้ดไพ ธ
+                        อนทำให้ง่ายต่อการดีบักโค้ดของเรา
+                        วิธีนี้จะช่วยให้คุณล้างข้อผิดพลาดได้ง่ายและจะเพิ่มความเร็วในการดำเนินการอย่างแน่นอน</p>
+                </li>
+            </ul>
+        </div>
+            <h1 class="text-3xl text-warning">จุดเด่นและจุดด้อยของภาษา Python</h1>
+            <div class="m-4">
+                <p class="text-xl">จุดเด่นคร่าวๆ ของ Python</p>
+                <ul class="list-disc pl-5 mt-2">
+                    <li class="mb-2">ไวยากรณ์ (Syntax) ของภาษานั้นอ่านและทำความเข้าใจได้ง่าย มีความตรงไปตรงมา
+                        คล้ายคลึงกันกับภาษาอังกฤษเลยก็ว่าได้</li>
+                    <li class="mb-2">สามารถนำไปประยุกต์ใช้งานได้หลากหลายด้าน ไม่ว่าจะเป็น Web Development, Data Science,
+                        AI & Machine Learning, GUI, Automation, Network Systems, Games, Web Scraping, etc</li>
+                    <li class="mb-2">Python เป็น open source ซอฟต์แวร์ เราสามารถโหลดใช้งานได้ฟรีไม่ต้องมีค่า license
+                        ต่าง ๆ</li>
+                </ul>
+                <p class="text-xl">จุดด้อย ของ Python</p>
+                <ul class="list-disc pl-5 mt-2">
+                    <li class="mb-2">ในด้านความเร็ว ถือว่าเป็นภาษาที่มีความเร็วในการประมวลผลช้ากว่าภาษาแนว Compiled
+                        Languages อย่างเช่น C, C++ เป็นต้น เพราะว่า Python นั้นจัดการหน่วยความจำให้เราอัตโนมัติ
+                        สังเกตง่าย ๆ ตอนกำหนดตัวแปรเราก็ไม่ต้องกำหนด Type ของตัวแปรเลย </li>
+                    <li class="mb-2">ไม่ใช่ภาษา Native สำหรับพัฒนา Mobile App
+                        นี่เป็นหนึ่งในไม่กี่ด้านที่ภาษาไพธอนทำได้ไม่เต็มที่ครับ ( ถึงแม้จะไลบรารีสำหรับทำด้านนี้อยู่บ้าง
+                        แต่ก็ไม่นิยม) โดยถ้าเป็นด้านพัฒนาแอพมือถือ ที่แนะนำก็จะเป็นภาษาหรือเครื่องมือจำพวก Flutter,
+                        React Native, Kotlin, Swift เป็นต้น แต่วงเล็บเอาไว้ว่าเราสามารถใช้ Python ทำเป็น API
+                        ฝั่งหลังบ้านของ Mobile App</li>
+                </ul>
+            </div>
+            <h1 class="text-3xl text-warning">What’s New In Python 3.12</h1>
+            <p class="text-base">This article explains the new features in Python 3.12, compared to 3.11. Python 3.12 was released on October 2, 2023</p>
+            <p class="text-base">New syntax features: <a href="https://docs.python.org/3/whatsnew/3.12.html?fbclid=IwAR1MPcPDIG72Kj3T5YYB4lrkhMA8P4F28r1rSGvgUbohavGKmWvYqAAMnQk#whatsnew312-pep695">PEP 695</a>, type parameter syntax and the type statement</p>
+            <iframe class="test_2 mt-3" src="https://www.programiz.com/python-programming/online-compiler/" width="100%" height="600" frameborder="0"></iframe>
+            </div>
+    </div>
+    <footer class="footer items-center p-4 bg-neutral text-neutral-content">
+        <aside class="items-center grid-flow-col">
+            <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+                clip-rule="evenodd" class="fill-current">
+                <path
+                    d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+                </path>
+            </svg>
+            <p>Copyright © 2024 - All right reserved</p>
+        </aside>
+        <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+            <a href="https://github.com/Earth123456789/WEB_PERSONAL" target="_blank" rel="noopener"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                </svg></path></a>
+        </nav>
+    </footer>
+    <script>
+        function toggleMenu() {
+            let menu = document.getElementById("menu");
+            menu.classList.toggle("hidden");
+        }
+
+        function animation() {
+            ScrollReveal().reveal('.headline', { delay: 850 });
+            ScrollReveal().reveal('.test_1', { delay: 250 });
+            ScrollReveal().reveal('.test_2', { delay: 250 });
+            gsap.from(".pic", {
+                opacity: 0,
+                y: 100,
+                duration: 2
+            });
+        }
+        animation()
+    </script>
 </body>
 
 </html>
