--- a/tailwind.html
+++ b/tailwind.html
@@ -55,7 +55,7 @@
         </div>
     </nav>
     <div class="flex flex-col justify-center items-center mt-10">
-        <img src="asset/tailwind.png" class="pic rounded-lg" alt="" width="1000" height="1000">
+        <img src="asset/tailwind 2.png" class="pic rounded-lg" alt="" width="1000" height="1000">
     </div>
     <div class="m-7">
         <h1 class="text-3xl text-info">CSS คืออะไร ?</h1>
