--- a/References.html
+++ b/References.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="synthwave">
+<html lang="en" data-theme="business">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <script></script>
+    <script>
+        
+    </script>
 </body>
 
 </html>
