--- a/postgreSQL.html
+++ b/postgreSQL.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="synthwave">
+<html lang="en" data-theme="business">
 
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
 
 
     <style>
-        body {
+        * {
             font-family: 'Dosis', sans-serif;
             font-family: 'Fjalla One', sans-serif;
             font-family: 'Itim', cursive;
