--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h2 class="card-title">Svelte</h2>
                 <p>cybernetically enhanced web apps.</p>
                 <div class="card-actions justify-end">
-                    <button class="btn btn-success"><a href="svelte.html">Click</a></button>
+                    <button class="btn btn-success rounded-lg"><a href="svelte.html">Click</a></button>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
                 <h2 class="card-title">Tailwind</h2>
                 <p>Rapidly build modern websites without ever leaving your HTML.</p>
                 <div class="card-actions justify-end">
-                    <button class="btn btn-success"><a href="tailwind.html">Click</a></button>
+                    <button class="btn btn-success rounded-lg"><a href="tailwind.html">Click</a></button>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <h2 class="card-title">Python</h2>
                 <p>is friendly & easy to learn.</p>
                 <div class="card-actions justify-end">
-                    <button class="btn btn-success"><a href="python.html">Click</a></button>
+                    <button class="btn btn-success rounded-lg"><a href="python.html">Click</a></button>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
                 <h2 class="card-title">JavaScript</h2>
                 <p> is a lightweight interpreted.</p>
                 <div class="card-actions justify-end">
-                    <button class="btn btn-success"><a href="javascript.html">Click</a></button>
+                    <button class="btn btn-success rounded-lg"><a href="javascript.html">Click</a></button>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 <h2 class="card-title">PostgreSQL</h2>
                 <p>The World's Most Advanced Open Source Relational Database.</p>
                 <div class="card-actions justify-end">
-                    <button class="btn btn-success"><a href="postgreSQL.html">Click</a></button>
+                    <button class="btn btn-success rounded-lg"><a href="postgreSQL.html">Click</a></button>
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
                 <h2 class="card-title">MongoDB</h2>
                 <p>The document data model maps to how you think and code.</p>
                 <div class="card-actions justify-end">
-                    <button class="btn btn-success"><a href="mongoDB.html">Click</a></button>
+                    <button class="btn btn-success rounded-lg"><a href="mongoDB.html">Click</a></button>
                 </div>
             </div>
         </div>
