--- a/postgreSQL.html
+++ b/postgreSQL.html
@@ -17,8 +17,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dosis&family=Fjalla+One&family=Saira+Condensed:wght@500&family=Sriracha&display=swap"
         rel="stylesheet">
-
-
     <style>
         * {
             font-family: 'Dosis', sans-serif;
@@ -29,13 +27,132 @@
             font-family: 'Fjalla One', sans-serif;
             font-family: 'Saira Condensed', sans-serif;
             font-family: 'Sriracha', cursive;
-
         }
     </style>
 </head>
 
 <body>
-    <script></script>
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+        <div class="flex-1">
+            <a href="index.html" class="btn btn-ghost text-xl">Project</a>
+        </div>
+        <div class="flex-none mx-5">
+            <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    class="inline-block w-5 h-5 stroke-current">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
+                    </path>
+                </svg>
+                <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
+                    <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
+                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                    <li><a href=" References.html">References</a></li>
+                </ul>
+            </button>
+        </div>
+    </nav>
+    <div class="flex flex-col justify-center items-center mt-10">
+        <img src="asset/Postgre.png" class="pic rounded-lg" alt="" width="750" height="750">
+    </div>
+    <div class="m-7">
+        <h1 class="text-3xl text-info">PostgreSQL คืออะไร ?</h1>
+        <div class="m-4">
+            <p class="text-xl">PostgreSQL เป็นฐานข้อมูลเชิงสัมพันธ์แบบโอเพ่นซอร์สระดับธุรกิจที่ทรงพลัง
+                อนุญาตให้ใช้ข้อมูลและแบบสอบถาม SQL เชิงสัมพันธ์และ JSON ที่ไม่ใช่เชิงสัมพันธ์ PostgreSQL
+                มีชุมชนที่แข็งแกร่งอยู่เบื้องหลัง PostgreSQL เป็นระบบจัดการฐานข้อมูลที่น่าเชื่อถือมาก พร้อมการสนับสนุน
+                ความปลอดภัย และความแม่นยำในระดับดีเยี่ยม โทรศัพท์มือถือและเว็บแอปพลิเคชันจำนวนมากใช้ PostgreSQL
+                เป็นฐานข้อมูลเริ่มต้น โซลูชันเชิงพื้นที่และการวิเคราะห์จำนวนมากใช้ประโยชน์จาก PostgreSQL
+                เวอร์ชันล่าสุดคือ PostgreSQL 15
+            </p>
+        </div>
+        <h1 class="text-3xl text-info">คุณสมบัติที่สำคัญของ PostgreSQL</h1>
+        <div class="m-4">
+            <p class="text-xl">หนึ่งในเหตุผลที่ PostgreSQL ได้รับความนิยมมากเนื่องจากชุดคุณลักษณะ ฐานข้อมูลช่วยในการ
+                พัฒนาแอปพลิเคชัน โดยการรักษาความสมบูรณ์ของข้อมูล
+                ช่วยให้ผู้ดูแลระบบสามารถสร้างสภาพแวดล้อมที่ทนต่อความผิดพลาดได้
+                นอกจากนี้ยังสามารถใช้ข้ามแพลตฟอร์มที่หลากหลายและใช้ประโยชน์จากภาษาโปรแกรมทั่วไปทั้งหมด
+                เราจะเห็นรายชื่อที่แน่นอนในภายหลัง
+
+                ฐานข้อมูลยังมีระบบล็อคขั้นสูงมาก นอกจากนี้ยังมีการควบคุมการทำงานพร้อมกันหลายเวอร์ชัน
+                เซิร์ฟเวอร์ฐานข้อมูล PostgreSQL
+                ยังมีฟังก์ชันการทำงานสำหรับการเขียนโปรแกรมฝั่งเซิร์ฟเวอร์สำหรับผู้ใหญ่อีกด้วย เป็นไปตามข้อกำหนด ANSI SQL
+                และรองรับสถาปัตยกรรมเครือข่ายไคลเอ็นต์-เซิร์ฟเวอร์อย่างสมบูรณ์
+
+                PostgreSQL ยังมีความพร้อมใช้งานสูงและเซิร์ฟเวอร์สำรอง สอดคล้องกับ ANSI-SQL2008 และเชิงวัตถุ
+                ความสามารถในการเชื่อมต่อกับคลังข้อมูลอื่นๆ เช่น NoSQL ซึ่งทำหน้าที่เป็นฮับแบบครบวงจรสำหรับระบบหลายภาษา
+                สามารถทำได้ผ่านการสนับสนุน JSON ของฐานข้อมูล
+                ข้อมูลของคลัสเตอร์ฐานข้อมูลเดียวจะได้รับการจัดการโดยอินสแตนซ์ PostgreSQL หนึ่งอินสแตนซ์เสมอ
+                คลัสเตอร์ของฐานข้อมูลคือกลุ่มของเร็กคอร์ดที่เก็บไว้ในที่เดียวกันบนระบบไฟล์
+            </p>
+        </div>
+        <h1 class="text-3xl text-info">สรุปความแตกต่าง: PostgreSQL เทียบกับ MySQL</h1>
+        <div class="overflow-x-auto mt-3">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>เรื่่อง</th>
+                        <th>PostgreSQL</th>
+                        <th>MySQL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Cy Ganderton</td>
+                        <td>Quality Control Specialist</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Hart Hagerty</td>
+                        <td>Desktop Support Technician</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Brice Swyre</td>
+                        <td>Tax Accountant</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+    <footer class="footer items-center p-4 bg-neutral text-neutral-content">
+        <aside class="items-center grid-flow-col">
+            <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+                clip-rule="evenodd" class="fill-current">
+                <path
+                    d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+                </path>
+            </svg>
+            <p>Copyright © 2024 - All right reserved</p>
+        </aside>
+        <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+            <a href="https://github.com/Earth123456789/WEB_PERSONAL" target="_blank" rel="noopener"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                </svg></path></a>
+        </nav>
+    </footer>
+    <script>
+        function toggleMenu() {
+            let menu = document.getElementById("menu");
+            menu.classList.toggle("hidden");
+        }
+        function animation() {
+            ScrollReveal().reveal('.headline', { delay: 850 });
+            ScrollReveal().reveal('.test_1', { delay: 250 });
+            ScrollReveal().reveal('.test_2', { delay: 250 });
+            gsap.from(".pic", {
+                opacity: 0,
+                y: 100,
+                duration: 2
+            });
+        }
+        animation();
+    </script>
 </body>
 
 </html>
