--- a/postgreSQL.html
+++ b/postgreSQL.html
@@ -87,10 +87,10 @@
             </p>
         </div>
         <h1 class="text-3xl text-info">สรุปความแตกต่าง: PostgreSQL เทียบกับ MySQL</h1>
-        <div class="overflow-x-auto mt-3">
-            <table class="table">
+        <div class="mt-3">
+            <table class="table test_1">
                 <thead>
-                    <tr>
+                    <tr class="bg-base-200">
                         <th>เรื่่อง</th>
                         <th>PostgreSQL</th>
                         <th>MySQL</th>
@@ -98,23 +98,57 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>Cy Ganderton</td>
-                        <td>Quality Control Specialist</td>
+                        <td>Data types</td>
+                        <td>PostgreSQL สนับสนุนประเภทข้อมูลทุกประเภทของ MySQL รวมถึงเรขาคณิต การแจกแจง ที่อยู่เครือข่าย
+                            อาร์เรย์ ช่วง XML, hstore และแบบรวม</td>
+                        <td>MySQL สนับสนุนประเภทข้อมูลตัวเลข ตัวอักษร วันเวลา เชิงพื้นที่และ JSON</td>
                     </tr>
                     <tr>
-                        <td>2</td>
-                        <td>Hart Hagerty</td>
-                        <td>Desktop Support Technician</td>
+                        <td>Performance</td>
+                        <td>Write — PostgreSQL ซึ่งมี built-in multiversion concurrency control (MVCC) จะไม่เกิดการ
+                            read-write
+                            locks ขึ้นและจำทำงานได้ดีในกรณีที่มีการ write บ่อยและพร้อมกัน <br>
+                            Read — สำหรับ PostgreSQL ทุก ๆ การเชื่อมกับ user ใหม่ จะต้องมีการจัดสรร memory
+                            ในเครื่องประมาณ 10 MB เพราะฉะนั้นการเลือกใช้ PostgreSQL สำหรับงานที่มีการ read มากๆ จะทำกิน
+                            resource ของเครื่องเป็นอย่างมาก</td>
+                        <td>Write — สำหรับ MySQL หากมี user ทำการแก้ไข table อยู่ user คนอื่นๆ
+                            อาจจะต้องรองให้ทุกอย่างเสร็จก่อนถึงจะเข้าไปทำการเปลี่ยนแปลง table ได้ <br>
+                            Read — MySQL จะใช้ single process สำหรับการใช้งานหลาย ๆ user จึงทำให้ MySQL
+                            เป็นตัวเลือกที่ดีกว่าสำหรับ application หรือ web ที่ใช้งานฟังค์ชั่น read เพื่อแสดงข้อมูลให้
+                            client เป็นหลัก</td>
                     </tr>
                     <tr>
-                        <td>3</td>
-                        <td>Brice Swyre</td>
-                        <td>Tax Accountant</td>
+                        <td>การสนับสนุนสำหรับผู้เริ่มต้น</td>
+                        <td>PostgreSQL เริ่มต้นใช้งานด้วยความซับซ้อนมากขึ้น มีชุดเครื่องมือที่จำกัดเฉพาะผู้ใช้ทั่วไป
+                        </td>
+                        <td>MySQL เริ่มต้นใช้งานได้ง่ายกว่า มีชุดเครื่องมือที่กว้างขวางสำหรับผู้ใช้ทั่วไป</td>
+                    </tr>
+                    <tr>
+                        <td>การปฏิบัติตามข้อกำหนด ACID</td>
+                        <td>PostgreSQL เป็นไปตามข้อกำหนด ACID เสมอ </td>
+                        <td>MySQL เป็นไปตามข้อกำหนด ACID เฉพาะกับ InnoDB และกลไกการเก็บข้อมูลคลัสเตอร์ NDB</td>
                     </tr>
                 </tbody>
             </table>
+            <p class="text-base mt-5">โดยสรุป
 
+                หาก database มีการใช้สำหรับการ read เป็นหลักให้เลือก MySQL
+                หาก database มีการ write และ อัพเดท บ่อยๆ ให้เลือก PostgreSQL</p>
+        </div>
+        <h1 class="text-3xl text-info mt-5">คุณสมบัติ PostgreSQL ที่ดี</h1>
+        <div class="m-4">
+            <p class="text-xl">PostgreSQL มีชุดคุณสมบัติที่แข็งแกร่งมาก ซึ่งรวมถึงความสามารถใน Multi-Version Concurrency
+                Control ( MVCC) และประสิทธิภาพของฐานข้อมูลแบบจุดต่อเวลา ฐานข้อมูลยังมีการควบคุมการเข้าถึงแบบละเอียด
+                พื้นที่ตาราง และความสามารถในการทำซ้ำแบบอะซิงโครนัส
+                ทั้งในแง่ของปริมาณข้อมูลที่สามารถจัดการได้และจำนวนลูกค้าที่พร้อมกันสามารถรองรับได้ PostgreSQL
+                สามารถปรับขนาดได้มาก ฐานข้อมูลยังอนุญาตให้ใช้ชุดอักขระสากล, Unicode รวมถึงการเข้ารหัสสตริงแบบหลายไบต์
+                นอกจากนี้ยังสามารถทำธุรกรรมที่ซ้อนกัน สำรองข้อมูลออนไลน์ และบันทึกการเขียนล่วงหน้า
+            </p>
+        </div>
+        <div class="mt-5">
+            <p class="text-3xl text-info mb-4">Code Example</p>
+            <iframe class="rounded-lg" src="https://www.programiz.com/sql/online-compiler/" width="100%" height="500px"
+                frameborder="0"></iframe>
         </div>
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
