--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </svg>
                 <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-30 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                            target="_blank" ">ดูเอกสาร</a></li>
                     <li><a href=" References.html">References</a></li>
                 </ul>
             </button>
