--- a/python.html
+++ b/python.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
         </div>
@@ -49,7 +49,7 @@
                 </svg>
                 <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                            target="_blank" ">ดูเอกสาร</a></li>
                     <li><a href=" References.html">References</a></li>
                 </ul>
             </button>
@@ -163,7 +163,10 @@
             <h1 class="text-3xl text-warning">What’s New In Python 3.12</h1>
             <p class="text-base">This article explains the new features in Python 3.12, compared to 3.11. Python 3.12 was released on October 2, 2023</p>
             <p class="text-base">New syntax features: <a href="https://docs.python.org/3/whatsnew/3.12.html?fbclid=IwAR1MPcPDIG72Kj3T5YYB4lrkhMA8P4F28r1rSGvgUbohavGKmWvYqAAMnQk#whatsnew312-pep695">PEP 695</a>, type parameter syntax and the type statement</p>
-            <iframe class="test_2 mt-3" src="https://www.programiz.com/python-programming/online-compiler/" width="100%" height="600" frameborder="0"></iframe>
+            </div>
+            <div class="flex flex-row justify-center items-center m-10">
+                <img src="asset/python-2.jpg" class="pic rounded-lg m-5" alt="" width="500" height="500">
+                <img src="asset/py.webp" class="pic rounded-lg" alt="" width="500" height="350">
             </div>
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
