--- a/mongoDB.html
+++ b/mongoDB.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
         </div>
@@ -49,7 +49,7 @@
                 </svg>
                 <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                            target="_blank" ">ดูเอกสาร</a></li>
                     <li><a href=" References.html">References</a></li>
                 </ul>
             </button>
@@ -88,9 +88,78 @@
                 <li class="mb-2"><strong>ความสามารถในการปรับขนาด </strong>: MongoDB
                     ใช้สถาปัตยกรรมแบบกระจายและรองรับการปรับขนาดในแนวนอน ซึ่งหมายความว่าสามารถจัดการข้อมูลจำนวนมากขึ้น
                     ตลอดจนอ่านและเขียนเวิร์กโหลดโดยไม่จำเป็นต้องอัปเกรดฮาร์ดแวร์ราคาแพง</li>
-                <li class="mb-2"><strong>ความพร้อมใช้งานสูง </strong>: MongoDB มีคุณสมบัติในตัวสำหรับการเฟลโอเวอร์อัตโนมัติและชุดเรพลิกา เพื่อให้มั่นใจว่าฐานข้อมูลยังคงพร้อมใช้งานและสามารถเข้าถึงได้ระหว่างความล้มเหลวของฮาร์ดแวร์หรือการหยุดชะงักอื่นๆ</li>
-                <li class="mb-2"><strong>การรวม </strong>: MongoDB มีเครื่องมือในตัวสำหรับการรวมข้อมูล ช่วยให้นักพัฒนาสามารถวิเคราะห์และจัดการข้อมูลจำนวนมากได้อย่างง่ายดาย</li>
+                <li class="mb-2"><strong>ความพร้อมใช้งานสูง </strong>: MongoDB
+                    มีคุณสมบัติในตัวสำหรับการเฟลโอเวอร์อัตโนมัติและชุดเรพลิกา
+                    เพื่อให้มั่นใจว่าฐานข้อมูลยังคงพร้อมใช้งานและสามารถเข้าถึงได้ระหว่างความล้มเหลวของฮาร์ดแวร์หรือการหยุดชะงักอื่นๆ
+                </li>
+                <li class="mb-2"><strong>การรวม </strong>: MongoDB มีเครื่องมือในตัวสำหรับการรวมข้อมูล
+                    ช่วยให้นักพัฒนาสามารถวิเคราะห์และจัดการข้อมูลจำนวนมากได้อย่างง่ายดาย</li>
             </ul>
+        </div>
+        <h1 class="text-3xl text-success">สรุปความเหมือน-แตกต่าง: MongoDB เทียบกับ PostgreSQL</h1>
+        <div class="m-4">
+            <table class="table test_1">
+                <thead>
+                    <tr class="bg-base-200">
+                        <th>เรื่่อง</th>
+                        <th>PostgreSQL</th>
+                        <th>MongoDB</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Transactions</td>
+                        <td>ACID Transactions</td>
+                        <td>ACID Transactions</td>
+                    </tr>
+                    <tr>
+                        <td>การจัดเก็บข้อมูล</td>
+                        <td>Table</td>
+                        <td>Collection</td>
+                    </tr>
+                    <tr>
+                        <td>ข้อมูลภายในการจัดเก็บข้อมูล</td>
+                        <td>Row, Column</td>
+                        <td>Document, Field</td>
+                    </tr>
+                    <tr>
+                        <td>ภาษาการสืบค้น</td>
+                        <td>PostgreSQL ใช้ตัวแปร SQL ที่ใช้ได้กับแบบสอบถาม SQL ทั่วไป</td>
+                        <td>MongoDB ใช้ภาษา MongoDB Query Language (MQL)</td>
+                    </tr>
+                    <tr>
+                        <td>ความพร้อมใช้งาน</td>
+                        <td>PostgreSQL ใช้การจำลองแบบตรรกะและสตรีมบวก PAF เพื่อความพร้อมใช้งาน
+                            โดยสามารถประมวลผลข้อมูลปริมาณมากพร้อมกันได้</td>
+                        <td>MongoDB ใช้การจำลองแบบโหนดหลักและโหนดรองเพื่อความพร้อมใช้งาน
+                            โดยสามารถจัดการกับเวิร์กโฟลว์การทำธุรกรรมได้</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <h1 class="text-3xl text-success">ทำไมต้องใช้ MongoDB?</h1>
+        <div class="m-4">
+            <p class="text-xl">
+            </p>ต่อไปนี้คือเหตุผลเพิ่มเติมบางประการที่นักพัฒนาอาจเลือกใช้ MongoDB ในแอปพลิเคชันของตน:
+
+            คุณลักษณะเฉพาะอย่างหนึ่งของ MongoDB คือโมเดลข้อมูลเชิงเอกสาร ซึ่งเก็บข้อมูลในรูปแบบของเอกสารที่คล้าย JSON
+            พร้อมสคีมาเสริม
+            ซึ่งช่วยให้นักพัฒนาสามารถจัดเก็บและดึงข้อมูลได้อย่างยืดหยุ่นและรวดเร็วกว่าฐานข้อมูลเชิงสัมพันธ์แบบดั้งเดิม
+            เนื่องจากสคีมาสามารถแก้ไขได้ง่ายโดยไม่จำเป็นต้องย้ายข้อมูลที่มีราคาแพง
+
+            MongoDB ยังเป็นที่รู้จักในด้านความสามารถในการจัดการข้อมูลจำนวนมากและปริมาณงานการอ่านและเขียน
+            สถาปัตยกรรมแบบกระจายและรองรับการปรับขนาดแนวนอนช่วยให้ปรับขนาดได้อย่างราบรื่นเมื่อขนาดและความซับซ้อนของข้อมูลเพิ่มขึ้น
+            ทำให้เป็นตัวเลือกที่ดีสำหรับแอปพลิเคชันที่ต้องประมวลผลและจัดเก็บข้อมูลจากผู้ใช้หรืออุปกรณ์จำนวนมาก
+
+            นอกจากความยืดหยุ่นและความสามารถในการปรับขยายแล้ว MongoDB ยังมีฟีเจอร์ในตัวสำหรับความพร้อมใช้งานสูง
+            ซึ่งรวมถึงเฟลโอเวอร์อัตโนมัติและชุดเรพลิกา
+            สิ่งนี้ทำให้มั่นใจได้ว่าฐานข้อมูลยังคงพร้อมใช้งานและสามารถเข้าถึงได้แม้ในช่วงที่ฮาร์ดแวร์ล้มเหลวหรือการหยุดชะงักอื่น
+            ๆ ทำให้เป็นตัวเลือกที่เชื่อถือได้สำหรับแอปพลิเคชันที่มีความสำคัญต่อภารกิจ
+        </div>
+        <div class="mt-5">
+            <p class="text-3xl text-success mb-4">Example</p>
+            <iframe class="rounded-lg" src="https://mongoplayground.net/" width="100%" height="1000px"
+                frameborder="0"></iframe>
         </div>
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
