--- a/postgreSQL.html
+++ b/postgreSQL.html
@@ -28,11 +28,35 @@
             font-family: 'Saira Condensed', sans-serif;
             font-family: 'Sriracha', cursive;
         }
+
+        .graph_1 {
+            width: 45.55%;
+        }
+
+        .graph_2 {
+            width: 41.09%;
+        }
+
+        .graph_3 {
+            width: 30.9%;
+        }
+
+        .graph_4 {
+            width: 25.52%;
+        }
+
+        .graph_5 {
+            width: 25.45%;
+        }
+
+        .hide {
+            width: 10%;
+        }
     </style>
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
         </div>
@@ -46,7 +70,7 @@
                 </svg>
                 <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                            target="_blank" ">ดูเอกสาร</a></li>
                     <li><a href=" References.html">References</a></li>
                 </ul>
             </button>
@@ -146,9 +170,49 @@
             </p>
         </div>
         <div class="mt-5">
-            <p class="text-3xl text-info mb-4">Code Example</p>
-            <iframe class="rounded-lg" src="https://www.programiz.com/sql/online-compiler/" width="100%" height="500px"
-                frameborder="0"></iframe>
+            <h1 class="text-3xl text-info">PostgreSQL ใช้สำหรับอะไร</h1>
+            <p class="text-xl">แบรนด์และบริษัทยอดนิยมหลายแห่งใช้ PostgreSQL เป็นส่วนหนึ่งของแบ็คเอนด์
+                ซึ่งรวมถึงชื่ออย่างเช่น Netflix , Uber, Instagram และอื่นๆ
+                เนื่องจากเป็นฐานข้อมูลจึงช่วยให้ผู้ใช้สามารถจัดเก็บข้อมูลได้หลายประเภท</p>
+            <ul class="list-disc pl-5 mt-2">
+                <li class="mb-2">ภาคการคลัง</li>
+                <li class="mb-2">จัดเก็บข้อมูลระบบสารสนเทศภูมิศาสตร์ ( GIS) ของรัฐบาล</li>
+                <li class="mb-2">การผลิต</li>
+                <li class="mb-2">การพัฒนาเว็บไซต์และ NoSQL</li>
+                <li class="mb-2">ข้อมูลทางวิทยาศาสตร์</li>
+            </ul>
+            <div class="ml-4">
+                <div class="mt-3 ml-4 headline">
+                    <p class="text-base">Top 5 Most popular technologies Databases in 2023 <br>Ref : <a
+                            class="text-error"
+                            href=https://survey.stackoverflow.co/2023/#most-popular-technologies-database"
+                            target="_blank">stackoverflow</a></p>
+                    <div
+                        class="h-20 bg-blue-500 border border-solid border-gray-700 m-2 p-2 hide graph graph_1 rounded-lg">
+                        <p class="text-base text-white">PostgreSQL 45.55%</p>
+                    </div>
+                    <div
+                        class="h-20 bg-gray-500 border border-solid border-gray-700 m-2 p-2 hide graph graph_2 rounded-lg">
+                        <p class="text-base text-white">MySQL 41.09%</p>
+                    </div>
+                    <div
+                        class="h-20 bg-blue-500 border border-solid border-gray-700 m-2 p-2 hide graph graph_3 rounded-lg">
+                        <p class="text-base text-white">SQLite 30.9%</p>
+                    </div>
+                    <div
+                        class="h-20 bg-green-500 border border-solid border-gray-700 m-2 p-2 hide graph graph_4 rounded-lg">
+                        <p class="text-base text-white">MongoDB 25.52%</p>
+                    </div>
+                    <div
+                        class="h-20 bg-red-500 border border-solid border-gray-700 m-2 p-2 hide graph graph_5 rounded-lg">
+                        <p class="text-base text-white">Microsoft SQL Server 25.45%</p>
+                    </div>
+
+                    <div class="flex flex-col justify-center items-center mt-10">
+                        <button class="btn btn-success rounded-lg text-white" onclick="toggleWidth()">See Graph</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
@@ -176,13 +240,25 @@
             menu.classList.toggle("hidden");
         }
         function animation() {
-            ScrollReveal().reveal('.headline', { delay: 850 });
+            ScrollReveal().reveal('.headline', { delay: 250 });
             ScrollReveal().reveal('.test_1', { delay: 250 });
             ScrollReveal().reveal('.test_2', { delay: 250 });
             gsap.from(".pic", {
                 opacity: 0,
                 y: 100,
                 duration: 2
+            });
+        }
+        function toggleWidth() {
+            const graphs = document.querySelectorAll('.graph');
+            graphs.forEach(graph => {
+                graph.classList.toggle("hide");
+                gsap.from(graph, {
+                    opacity: 0,
+                    width: "0%",
+                    duration: 1,
+                    ease: "power2.out",
+                });
             });
         }
         animation();
