--- a/svelte.html
+++ b/svelte.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
         </div>
@@ -48,7 +48,7 @@
                 </svg>
                 <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                            target="_blank" ">ดูเอกสาร</a></li>
                     <li><a href=" References.html">References</a></li>
                 </ul>
             </button>
@@ -101,7 +101,7 @@
                 เพราะมันคือจาวาสคริปต์ธรรมดาๆ</p>
 
             <div class="flex flex-col justify-center items-center mt-10 mb-7">
-                <img src="asset/svelte vs react.png" class="pic rounded-lg" alt="" width="1000" height="1000">
+                <img src="asset/svelte vs react.png" class="pic rounded-lg" alt="" width="500" height="500">
             </div>
             <h1 class="text-3xl text-accent">3 สิ่งที่ทำให้ Svelte แตกต่าง</h1>
             <div class="m-4">
@@ -173,7 +173,6 @@
 
             </div>
         </div>
-
     </div>
     </div>
 
