--- a/tailwind.html
+++ b/tailwind.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
         </div>
@@ -48,7 +48,7 @@
                 </svg>
                 <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
                     <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">เอกสาร (เนื้อหา)</a></li>
+                            target="_blank" ">ดูเอกสาร</a></li>
                     <li><a href=" References.html">References</a></li>
                 </ul>
             </button>
@@ -110,10 +110,11 @@
 
                 It's fast, flexible, and reliable — with zero-runtime.
             </p>
+            <div class="flex flex-col justify-center items-center mt-10">
+               <iframe src="https://play.tailwindcss.com/biizQXffiJ" width="100%" height="600" frameborder="0"></iframe>
+            </div>
         </div>
-        <div class="flex flex-col justify-center items-center m-10">
-            <iframe class="test_2'" src="https://play.tailwindcss.com/" width="100%" height="400" frameborder="0"></iframe>
-        </div>
+      
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
         <aside class="items-center grid-flow-col">
